--- a/app/src/main/res/layout/fragment_d_new2.xml
+++ b/app/src/main/res/layout/fragment_d_new2.xml
@@ -20,9 +20,9 @@
         />
 
     <EditText
-        android:layout_width="100dp"
+        android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:hint="1st SEM"
+        android:hint="1st SEM SGPA"
         android:textSize="15sp"
         android:textAlignment="center"
         android:textStyle="bold"
@@ -34,9 +34,9 @@
         />
 
     <EditText
-        android:layout_width="100dp"
+        android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:hint="2nd SEM"
+        android:hint="2nd SEM SGPA"
         android:id="@+id/sec"
         android:textSize="15sp"
         android:textAlignment="center"
@@ -47,9 +47,9 @@
         android:inputType="numberDecimal"/>
 
     <EditText
-        android:layout_width="100dp"
+        android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:hint="3rd SEM"
+        android:hint="3rd SEM SGPA"
         android:textSize="15sp"
         android:textAlignment="center"
         android:textStyle="bold"
@@ -61,9 +61,9 @@
         />
 
     <EditText
-        android:layout_width="100dp"
+        android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:hint="4th SEM"
+        android:hint="4th SEM SGPA"
         android:textSize="15sp"
         android:textAlignment="center"
         android:textStyle="bold"
@@ -75,9 +75,9 @@
         />
 
     <EditText
-        android:layout_width="100dp"
+        android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:hint="5th SEM"
+        android:hint="5th SEM SGPA"
         android:id="@+id/fifth"
         android:textSize="15sp"
         android:textAlignment="center"
@@ -89,9 +89,9 @@
         />
 
     <EditText
-        android:layout_width="100dp"
+        android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:hint="6th SEM"
+        android:hint="6th SEM SGPA"
         android:id="@+id/sixth"
         android:textSize="15sp"
         android:textAlignment="center"
@@ -103,9 +103,9 @@
         />
 
     <EditText
-        android:layout_width="100dp"
+        android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:hint="7th SEM"
+        android:hint="7th SEM SGPA"
         android:id="@+id/seventh"
         android:textSize="15sp"
         android:textAlignment="center"
@@ -116,9 +116,9 @@
         />
 
     <EditText
-        android:layout_width="100dp"
+        android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:hint="8th SEM"
+        android:hint="8th SEM SGPA"
         android:id="@+id/eight"
         android:textSize="15sp"
         android:textAlignment="center"
