--- a/app/src/main/res/layout/fragment_d_new2.xml
+++ b/app/src/main/res/layout/fragment_d_new2.xml
@@ -23,6 +23,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:hint="1st SEM SGPA"
+        android:textColorHint="@color/black2"
         android:textSize="15sp"
         android:textAlignment="center"
         android:textStyle="bold"
@@ -36,6 +37,7 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:textColorHint="@color/black2"
         android:hint="2nd SEM SGPA"
         android:id="@+id/sec"
         android:textSize="15sp"
@@ -49,6 +51,7 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:textColorHint="@color/black2"
         android:hint="3rd SEM SGPA"
         android:textSize="15sp"
         android:textAlignment="center"
@@ -63,6 +66,7 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:textColorHint="@color/black2"
         android:hint="4th SEM SGPA"
         android:textSize="15sp"
         android:textAlignment="center"
@@ -77,6 +81,7 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:textColorHint="@color/black2"
         android:hint="5th SEM SGPA"
         android:id="@+id/fifth"
         android:textSize="15sp"
@@ -91,6 +96,7 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:textColorHint="@color/black2"
         android:hint="6th SEM SGPA"
         android:id="@+id/sixth"
         android:textSize="15sp"
@@ -105,6 +111,7 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:textColorHint="@color/black2"
         android:hint="7th SEM SGPA"
         android:id="@+id/seventh"
         android:textSize="15sp"
@@ -118,6 +125,7 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:textColorHint="@color/black2"
         android:hint="8th SEM SGPA"
         android:id="@+id/eight"
         android:textSize="15sp"
